@@ -25,3 +25,8 @@ unsigned MySqlRunAllocator::alloc() {
     return 0;
   }
 };
+
+int MySqlRunAllocator::reportOpenFile(int run, int stream, int chunk)
+{
+  return _offlineclient ? _offlineclient->reportOpenFile(run,stream,chunk) : 0;
+}
