@@ -11,6 +11,7 @@ namespace Pds {
   public:
     MySqlRunAllocator(OfflineClient*);
     unsigned alloc();
+    int      reportOpenFile(int run, int stream, int chunk);
   private:
     OfflineClient* _offlineclient;
   };
