@@ -24,7 +24,7 @@ tgtsrcs_control_gui += PVManager.cc
 tgtsrcs_control_gui += PVMonitor.cc
 tgtsrcs_control_gui += PVControl.cc
 tgtsrcs_control_gui += EpicsCA.cc
-tgtlibs_control_gui := pdsdata/xtcdata pdsdata/opal1kdata pdsdata/pulnixdata pdsdata/camdata pdsdata/pnccddata pdsdata/evrdata pdsdata/acqdata pdsdata/controldata pdsdata/princetondata pdsdata/ipimbdata pdsdata/encoderdata pdsdata/fccddata pdsdata/lusidata
+tgtlibs_control_gui := pdsdata/xtcdata pdsdata/opal1kdata pdsdata/pulnixdata pdsdata/camdata pdsdata/pnccddata pdsdata/evrdata pdsdata/acqdata pdsdata/controldata pdsdata/princetondata pdsdata/ipimbdata pdsdata/encoderdata pdsdata/fccddata pdsdata/lusidata pdsdata/cspaddata
 tgtlibs_control_gui += pds/service pds/collection pds/xtc pds/mon pds/vmon pds/utility pds/client pds/offlineclient pds/config pds/management
 tgtlibs_control_gui += pdsapp/configdb
 tgtlibs_control_gui += qt/QtGui qt/QtCore
