@@ -21,22 +21,6 @@
 #include <fcntl.h>
 #include <unistd.h>
 
-namespace Pds {
-  class OpenFileOccurrence : public Occurrence {
-  public:
-    OpenFileOccurrence(const char* name) :
-      Occurrence(OccurrenceId::DataFileOpened, sizeof(*this)) 
-    {
-      strncpy(_name, name, NameLength);
-      _name[NameLength-1] = 0;
-    }
-  public:
-    const char* name() const { return _name; }
-  private:
-    enum { NameLength=64 };
-    char _name[NameLength];
-  };
-};
     
 using namespace Pds;
 
@@ -62,7 +46,7 @@ Recorder::Recorder(const char* path, unsigned int sliceID, uint64_t chunkSize) :
   _chunkSize(chunkSize),
   _experiment(0),
   _run(0),
-  _occPool(new GenericPool(sizeof(OpenFileOccurrence),4))
+  _occPool(new GenericPool(sizeof(DataFileOpened),4))
 {
   struct stat st;
 
@@ -245,7 +229,7 @@ int Recorder::_openOutputFile(bool verbose) {
     if (verbose) {
       printf("Opened %s\n",_fname);
     }
-    post(new(_occPool) OpenFileOccurrence(_fname));
+    post(new(_occPool) DataFileOpened(_experiment,_run,_sliceID,_chunk));
   }
   else {
     if (verbose) {
